@@ -87,6 +87,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -4462,19 +4472,62 @@ operator|.
 name|closeAndDelete
 argument_list|()
 expr_stmt|;
-comment|// 5. Trigger immediate assignment of this region
+block|}
+comment|// 5. Trigger immediate assignment of the regions in round-robin fashion
+name|List
+argument_list|<
+name|HServerInfo
+argument_list|>
+name|servers
+init|=
+name|serverManager
+operator|.
+name|getOnlineServersList
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|this
+operator|.
 name|assignmentManager
 operator|.
-name|assign
+name|assignUserRegions
 argument_list|(
-name|region
+name|Arrays
 operator|.
-name|getRegionInfo
-argument_list|()
+name|asList
+argument_list|(
+name|newRegions
+argument_list|)
 argument_list|,
-literal|true
+name|servers
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Caught "
+operator|+
+name|ie
+operator|+
+literal|" during round-robin assignment"
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+name|ie
+argument_list|)
+throw|;
 block|}
 comment|// 5. If sync, wait for assignment of regions
 if|if
