@@ -1649,14 +1649,59 @@ name|serverIdx
 init|=
 literal|0
 decl_stmt|;
+if|if
+condition|(
+name|numServers
+operator|>
+literal|1
+condition|)
+block|{
+name|serverIdx
+operator|=
+name|rand
+operator|.
+name|nextInt
+argument_list|(
+name|numServers
+argument_list|)
+expr_stmt|;
+block|}
+name|int
+name|regionIdx
+init|=
+literal|0
+decl_stmt|;
 for|for
 control|(
-name|HServerInfo
-name|server
-range|:
-name|servers
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|numServers
+condition|;
+name|j
+operator|++
 control|)
 block|{
+name|HServerInfo
+name|server
+init|=
+name|servers
+operator|.
+name|get
+argument_list|(
+operator|(
+name|j
+operator|+
+name|serverIdx
+operator|)
+operator|%
+name|numServers
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|HRegionInfo
@@ -1677,14 +1722,11 @@ control|(
 name|int
 name|i
 init|=
-name|serverIdx
+name|regionIdx
 init|;
 name|i
 operator|<
-name|regions
-operator|.
-name|size
-argument_list|()
+name|numRegions
 condition|;
 name|i
 operator|+=
@@ -1700,6 +1742,8 @@ operator|.
 name|get
 argument_list|(
 name|i
+operator|%
+name|numRegions
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1713,7 +1757,7 @@ argument_list|,
 name|serverRegions
 argument_list|)
 expr_stmt|;
-name|serverIdx
+name|regionIdx
 operator|++
 expr_stmt|;
 block|}
