@@ -69,7 +69,37 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -1815,6 +1845,208 @@ block|{
 comment|// continue
 block|}
 block|}
+specifier|protected
+name|void
+name|verifyRoundRobinDistribution
+parameter_list|(
+name|HTable
+name|ht
+parameter_list|,
+name|int
+name|expectedRegions
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|numRS
+init|=
+name|ht
+operator|.
+name|getCurrentNrHRS
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|HRegionInfo
+argument_list|,
+name|HServerAddress
+argument_list|>
+name|regions
+init|=
+name|ht
+operator|.
+name|getRegionsInfo
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|HServerAddress
+argument_list|,
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|>
+name|server2Regions
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|HServerAddress
+argument_list|,
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|HRegionInfo
+argument_list|,
+name|HServerAddress
+argument_list|>
+name|entry
+range|:
+name|regions
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|HServerAddress
+name|server
+init|=
+name|entry
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+name|regs
+init|=
+name|server2Regions
+operator|.
+name|get
+argument_list|(
+name|server
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|regs
+operator|==
+literal|null
+condition|)
+block|{
+name|regs
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|server2Regions
+operator|.
+name|put
+argument_list|(
+name|server
+argument_list|,
+name|regs
+argument_list|)
+expr_stmt|;
+block|}
+name|regs
+operator|.
+name|add
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|float
+name|average
+init|=
+operator|(
+name|float
+operator|)
+name|expectedRegions
+operator|/
+name|numRS
+decl_stmt|;
+name|int
+name|min
+init|=
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|floor
+argument_list|(
+name|average
+argument_list|)
+decl_stmt|;
+name|int
+name|max
+init|=
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|ceil
+argument_list|(
+name|average
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+name|regionList
+range|:
+name|server2Regions
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|regionList
+operator|.
+name|size
+argument_list|()
+operator|==
+name|min
+operator|||
+name|regionList
+operator|.
+name|size
+argument_list|()
+operator|==
+name|max
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Test
 specifier|public
@@ -2494,6 +2726,13 @@ operator|.
 name|length
 operator|==
 literal|0
+argument_list|)
+expr_stmt|;
+name|verifyRoundRobinDistribution
+argument_list|(
+name|ht
+argument_list|,
+name|expectedRegions
 argument_list|)
 expr_stmt|;
 comment|// Now test using start/end with a number of regions
@@ -3480,6 +3719,13 @@ operator|==
 literal|0
 argument_list|)
 expr_stmt|;
+name|verifyRoundRobinDistribution
+argument_list|(
+name|ht
+argument_list|,
+name|expectedRegions
+argument_list|)
+expr_stmt|;
 comment|// Try once more with something that divides into something infinite
 name|startKey
 operator|=
@@ -3643,6 +3889,13 @@ name|size
 argument_list|()
 operator|+
 literal|" regions"
+argument_list|)
+expr_stmt|;
+name|verifyRoundRobinDistribution
+argument_list|(
+name|ht
+argument_list|,
+name|expectedRegions
 argument_list|)
 expr_stmt|;
 comment|// Try an invalid case where there are duplicate split keys
